Dodano autoryzacje JWT

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Nawigacja</title>
+    <title>Home</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
 <nav>
     <ul>
         <li><a href="/index.html">Home</a></li>
@@ -13,6 +12,5 @@
         <li><a href="/login.html">Zaloguj</a></li>
     </ul>
 </nav>
-
 </body>
 </html>
