--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 </nav>
 <body>
 <h1>Logowanie</h1>
-<form action="/register" method="POST">
+<form action="/login" method="POST">
     <label for="email">Email:</label><br>
     <input type="email" id="email" name="email"><br>
     <label for="password">Haslo:</label><br>
