--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,18 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script th:inline="javascript">
+    /*<![CDATA[*/
+    var usernameFromThymeleaf = /*[[${username}]]*/ null;
+    console.log("Username from Thymeleaf: " + usernameFromThymeleaf);
+    /*]]>*/
+  </script>
 </head>
 <body>
 
 <nav>
   <ul>
-    <li><a href="/home.html">Home</a></li>
-    <li><a href="/register.html">Rejestracja</a></li>
-    <li><a href="/login.html">Zaloguj</a></li>
+    <li><a th:href="@{/home}">Home</a></li>
+    <li><a th:href="@{/register}">Rejestracja</a></li>
+    <li><a th:href="@{/login}">Zaloguj</a></li>
   </ul>
 </nav>
 
-<div th:if="${username != null}">
+<div th:if="${username != null}" class="welcome-message">
   <p>Witaj, <span th:text="${username}"></span>!</p>
 </div>
 
