--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Logowanie</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <nav>
     <ul>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/register.html">Rejestracja</a></li>
-        <li><a href="/login.html">Zaloguj</a></li>
+        <li><a th:href="@{/home}">Home</a></li>
+        <li><a th:href="@{/register}">Rejestracja</a></li>
+        <li><a th:href="@{/login}">Zaloguj</a></li>
     </ul>
 </nav>
 <body>
