--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2,9 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:import="com.example.ships.model.Role"></th:block>
 <head>
-    <title>Logowanie</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Panel</title>
     <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 </head>
+<body>
+
 <nav>
     <ul>
         <li><a th:href="@{/home}">Home</a></li>
@@ -18,14 +23,8 @@
         </li>
     </ul>
 </nav>
-<body>
-<h1>Logowanie</h1>
-<form action="/login" method="POST">
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email"><br>
-    <label for="password">Haslo:</label><br>
-    <input type="password" id="password" name="password"><br>
-    <input type="submit" value="Zaloguj"><br>
-</form>
+
+<h2>Panel Administracyjny</h2>
+
 </body>
 </html>
