--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<th:block th:import="com.example.ships.model.Role"></th:block>
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
   <script th:inline="javascript">
     /*<![CDATA[*/
     var usernameFromThymeleaf = /*[[${username}]]*/ null;
@@ -20,6 +21,12 @@
     <li><a th:href="@{/home}">Home</a></li>
     <li><a th:href="@{/register}">Rejestracja</a></li>
     <li><a th:href="@{/login}">Zaloguj</a></li>
+    <li th:if="${roles != null and roles.contains(T(com.example.ships.model.Role).ADMIN)}">
+      <a th:href="@{/admin}">Panel Administracyjny</a>
+    </li>
+    <li th:if="${session['username'] ne null}">
+      <a th:href="@{/logout}">Wyloguj</a>
+    </li>
   </ul>
 </nav>
 
