--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -36,4 +36,20 @@ nav ul li a:hover {
     color: #333;
 }
 
+.error
+{
+    color: red;
+    font-weight: bold;
+    font-size: 15px;
+    margin: 10px;
+    display: block;
+}
+#error
+{
+    color: red;
+    font-weight: bold;
+    font-size: 15px;
+    margin: 10px;
+    display: block;
+}
 
