--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -33,6 +33,6 @@
 <div th:if="${username != null}" class="welcome-message">
   <p>Witaj, <span th:text="${username}"></span>!</p>
 </div>
-<a href="/addShipForm">Dodaj przypłyniecie statku do portu</a>
+<a href="/addShip">Dodaj przypłyniecie statku do portu</a>
 </body>
 </html>
