add: function for display all ships arrival, dedicated view

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -34,5 +34,6 @@
   <p>Witaj, <span th:text="${username}"></span>!</p>
 </div>
 <a href="/addShip">Dodaj przypłyniecie statku do portu</a>
+<a href="/showArrivalShips">Wyswietl przypłynięcia statków do portu w Świnoujściu</a>
 </body>
 </html>
