--- a/src/main/resources/templates/addShip.html
+++ b/src/main/resources/templates/addShip.html
@@ -45,6 +45,12 @@
     </div>
 
     <div>
+        <label for="flag">Bandera</label>
+        <input type="text" id="flag" name="flag" required th:field="*{flag}">
+        <span class="error" th:if="${#fields.hasErrors('flag')}" th:errors="*{flag}"></span>
+    </div>
+
+    <div>
         <label for="grossCapacity">Pojemność brutto</label>
         <input type="number" id="grossCapacity" name="grossCapacity" step="any" min="0" required th:field="*{grossCapacity}">
         <span class="error" th:if="${#fields.hasErrors('grossCapacity')}" th:errors="*{grossCapacity}"></span>
