--- a/src/main/resources/templates/showArrivalShips.html
+++ b/src/main/resources/templates/showArrivalShips.html
@@ -11,6 +11,7 @@
             <thead>
             <tr>
                 <th>Nazwa</th>
+                <th>Bandera</th>
                 <th>Data przybycia</th>
                 <th>Godzina przybycia</th>
                 <th>Kod portu, z którego statek przypłynął</th>
@@ -23,6 +24,7 @@
             <tbody>
             <tr th:each="ship : ${ships}">
                 <td th:text="${ship.shipName}"></td>
+                <td th:text="${ship.flag}"></td>
                 <td th:text="${ship.arrivalDate}"></td>
                 <td th:text="${ship.arrivalTime}"></td>
                 <td th:text="${ship.initialPortCode}"></td>
