--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -33,6 +33,14 @@
 <div th:if="${username != null}" class="welcome-message">
   <p>Witaj, <span th:text="${username}"></span>!</p>
 </div>
+<div>
+  <div th:if="${successMessage}" class="success-message">
+    <p th:text="${successMessage}"></p>
+  </div>
+  <div th:if="${errorMessage}" class="error-message">
+    <p th:text="${errorMessage}"></p>
+  </div>
+</div>
 <a href="/addShip">Dodaj przypłyniecie statku do portu</a>
 <a href="/showArrivalShips">Wyswietl przypłynięcia statków do portu w Świnoujściu</a>
 </body>
