--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,37 +1,48 @@
-body {
+body
+{
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
 }
 
-nav {
+.container
+{
+    padding: 10px;
+}
+
+nav
+{
     background-color: #333;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 20px;
     color: #fff;
 }
 
-nav ul {
+nav ul
+{
     display: flex;
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-nav ul li {
+nav ul li
+{
     margin-right: 20px;
 }
 
-nav ul li a {
+nav ul li a
+{
     color: #fff;
     text-decoration: none;
     padding: 5px 10px;
     border-radius: 5px;
 }
 
-nav ul li a:hover {
+nav ul li a:hover
+{
     background-color: #fff;
     color: #333;
 }
@@ -51,5 +62,57 @@ nav ul li a:hover {
     font-size: 15px;
     margin: 10px;
     display: block;
+}
+
+.welcome-message
+{
+    float: right;
+}
+
+.user-dropdown {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 0;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.user-dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.home
+{
+    text-decoration: none;
+    color: white;
+}
+
+a[href="/home"]
+{
+    text-decoration: none;
+}
+
+.button
+{
+    margin-bottom: 10px;
 }
 
