--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -5,26 +5,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Panel</title>
+    <title>Panel Administracyjny</title>
     <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 </head>
 <body>
-
 <nav>
-    <ul>
-        <li><a th:href="@{/home}">Home</a></li>
-        <li><a th:href="@{/register}">Rejestracja</a></li>
-        <li><a th:href="@{/login}">Zaloguj</a></li>
-        <li th:if="${roles != null and roles.contains(T(com.example.ships.model.Role).ADMIN)}">
-            <a th:href="@{/admin}">Panel Administracyjny</a>
-        </li>
-        <li th:if="${session['username'] ne null}">
-            <a th:href="@{/logout}">Wyloguj</a>
-        </li>
-    </ul>
+
+    <a th:href="@{/}"><span class="home">Home</span></a>
+    <div th:if="${session['username'] != null}" class="welcome-message">
+        <div class="user-dropdown">
+            <span th:text="'Witaj ' + ${username} + '!'"></span>
+            <div class="dropdown-content">
+                <a th:href="@{/logout}">Wyloguj</a>
+                <a th:href="@{/profile}">Profil</a>
+                <a th:if="${isAdmin}" th:href="@{/admin}">Panel Administracyjny</a>
+            </div>
+        </div>
+    </div>
+
+    <div th:if="${session['username'] == null}" class="welcome-message">
+        <div class="user-dropdown">
+            <span th:text="Gość"></span>
+            <div class="dropdown-content">
+                <a th:href="@{/register}">Rejestracja</a>
+                <a th:href="@{/login}">Zaloguj</a>
+            </div>
+        </div>
+    </div>
 </nav>
 
-<h2>Panel Administracyjny</h2>
+<div class="container">
+    <h2>Panel Administracyjny</h2>
+</div>
 
 </body>
 </html>
