--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,39 +9,56 @@
   <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
   <script th:inline="javascript">
     /*<![CDATA[*/
-    var usernameFromThymeleaf = /*[[${username}]]*/ null;
-    console.log("Username from Thymeleaf: " + usernameFromThymeleaf);
     /*]]>*/
   </script>
 </head>
 <body>
 
 <nav>
-  <ul>
-    <li><a th:href="@{/home}">Home</a></li>
-    <li><a th:href="@{/register}">Rejestracja</a></li>
-    <li><a th:href="@{/login}">Zaloguj</a></li>
-    <li th:if="${roles != null and roles.contains(T(com.example.ships.model.Role).ADMIN)}">
-      <a th:href="@{/admin}">Panel Administracyjny</a>
-    </li>
-    <li th:if="${session['username'] ne null}">
-      <a th:href="@{/logout}">Wyloguj</a>
-    </li>
-  </ul>
-</nav>
+  <a th:href="@{/}"><span class="home">Home</span></a>
+  <div th:if="${session['username'] != null}" class="welcome-message">
+    <div class="user-dropdown">
+      <span th:text="'Witaj ' + ${username} + '!'"></span>
+      <div class="dropdown-content">
+        <a th:href="@{/profile}">Profil</a>
+        <a th:if="${isAdmin}" th:href="@{/admin}">Panel Administracyjny</a>
+        <a th:href="@{/logout}">Wyloguj</a>
+      </div>
+    </div>
+  </div>
+  <div th:if="${session['username'] == null}" class="welcome-message">
+    <div class="user-dropdown">
+      <span th:text="Gość"></span>
+      <div class="dropdown-content">
+        <a th:href="@{/register}">Rejestracja</a>
+        <a th:href="@{/login}">Zaloguj</a>
+      </div>
+    </div>
+  </div>
 
-<div th:if="${username != null}" class="welcome-message">
-  <p>Witaj, <span th:text="${username}"></span>!</p>
-</div>
-<div>
-  <div th:if="${successMessage}" class="success-message">
-    <p th:text="${successMessage}"></p>
+</nav>
+<div class="container">
+  <div>
+    <div th:if="${successMessage}" class="success-message">
+      <p th:text="${successMessage}"></p>
+    </div>
+    <div th:if="${errorMessage}" class="error-message">
+      <p th:text="${errorMessage}"></p>
+    </div>
   </div>
-  <div th:if="${errorMessage}" class="error-message">
-    <p th:text="${errorMessage}"></p>
+
+  <div class="button">
+    <a th:if="${session['username'] != null}" th:href="@{/addShip}">
+      <button>Dodaj przypłynięcie statku do portu</button>
+    </a>
+  </div>
+
+  <div class="button">
+    <a th:href="@{/showArrivalShips}">
+      <button>Wyswietl przypłynięcia statków do portu w Świnoujściu</button>
+    </a>
   </div>
 </div>
-<a href="/addShip">Dodaj przypłyniecie statku do portu</a>
-<a href="/showArrivalShips">Wyswietl przypłynięcia statków do portu w Świnoujściu</a>
+
 </body>
 </html>
