--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,27 +5,38 @@
     <title>Logowanie</title>
     <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 </head>
-<nav>
-    <ul>
-        <li><a th:href="@{/home}">Home</a></li>
-        <li><a th:href="@{/register}">Rejestracja</a></li>
-        <li><a th:href="@{/login}">Zaloguj</a></li>
-        <li th:if="${roles != null and roles.contains(T(com.example.ships.model.Role).ADMIN)}">
-            <a th:href="@{/admin}">Panel Administracyjny</a>
-        </li>
-        <li th:if="${session['username'] ne null}">
-            <a th:href="@{/logout}">Wyloguj</a>
-        </li>
-    </ul>
-</nav>
 <body>
-<h1>Logowanie</h1>
-<form action="/login" method="POST">
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email"><br>
-    <label for="password">Haslo:</label><br>
-    <input type="password" id="password" name="password"><br>
-    <input type="submit" value="Zaloguj"><br>
-</form>
+<nav>
+    <a th:href="@{/}"><span class="home">Home</span></a>
+    <div th:if="${session['username'] != null}" class="welcome-message">
+        <div class="user-dropdown">
+            <span th:text="'Witaj ' + ${username} + '!'"></span>
+            <div class="dropdown-content">
+                <a th:href="@{/logout}">Wyloguj</a>
+                <a th:href="@{/profile}">Profil</a>
+                <a th:if="${isAdmin}" th:href="@{/admin}">Panel Administracyjny</a>
+            </div>
+        </div>
+    </div>
+
+    <div th:if="${session['username'] == null}" class="welcome-message">
+        <div class="user-dropdown">
+            <span th:text="Gość"></span>
+            <div class="dropdown-content">
+                <a th:href="@{/register}">Rejestracja</a>
+            </div>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <h1>Logowanie</h1>
+    <form action="/login" method="POST">
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email"><br>
+        <label for="password">Haslo:</label><br>
+        <input type="password" id="password" name="password"><br>
+        <input type="submit" value="Zaloguj"><br>
+    </form>
+</div>
 </body>
 </html>
