--- a/src/main/resources/templates/showArrivalShips.html
+++ b/src/main/resources/templates/showArrivalShips.html
@@ -3,8 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Lista przypłynięć statków do portu w Świnoujściu</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 </head>
 <body>
+<nav>
+    <a th:href="@{/}"><span class="home">Home</span></a>
+    <div th:if="${session['username'] != null}" class="welcome-message">
+        <div class="user-dropdown">
+            <span th:text="'Witaj ' + ${username} + '!'"></span>
+            <div class="dropdown-content">
+                <a th:href="@{/logout}">Wyloguj</a>
+                <a th:href="@{/profile}">Profil</a>
+                <a th:if="${isAdmin}" th:href="@{/admin}">Panel Administracyjny</a>
+            </div>
+        </div>
+    </div>
+
+    <div th:if="${session['username'] == null}" class="welcome-message">
+        <div class="user-dropdown">
+            <span th:text="Gość"></span>
+            <div class="dropdown-content">
+                <a th:href="@{/register}">Rejestracja</a>
+                <a th:href="@{/login}">Zaloguj</a>
+            </div>
+        </div>
+    </div>
+</nav>
+<div class="container">
     <h1>Lista przypłynięć statków do portu w Świnoujściu</h1>
     <div>
         <div th:if="${successMessage}" class="success-message">
@@ -22,10 +47,6 @@
                 <th>Bandera</th>
                 <th>Data przybycia</th>
                 <th>Godzina przybycia</th>
-                <th>Kod portu, z którego statek przypłynął</th>
-                <th>Pojemność</th>
-                <th>Długość</th>
-                <th>Agent</th>
                 <th>Nadbrzeże</th>
             </tr>
             </thead>
@@ -35,14 +56,11 @@
                 <td th:text="${ship.flag}"></td>
                 <td th:text="${ship.arrivalDate}"></td>
                 <td th:text="${ship.arrivalTime}"></td>
-                <td th:text="${ship.initialPortCode}"></td>
-                <td th:text="${ship.grossCapacity}"></td>
-                <td th:text="${ship.length}"></td>
-                <td th:text="${ship.agent}"></td>
                 <td th:text="${ship.mooringPlace}"></td>
             </tr>
             </tbody>
         </table>
     </div>
+</div>
 </body>
 </html>
