--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -29,13 +29,19 @@
     </div>
 </nav>
 <h1>Formularz rejestracji</h1>
-<form action="/register" method="POST">
-    <label for="username">Nazwa uzytkownika:</label><br>
-    <input type="text" id="username" name="username" required><br>
+<form action="/register" method="POST" th:object="${user}">
+    <label for="username">Nazwa użytkownika:</label><br>
+    <input type="text" id="username" name="username" th:field="*{username}" required th:value="${user.username}"><br>
+    <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="error"></div>
     <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" required><br>
-    <label for="password">Haslo:</label><br>
-    <input type="password" id="password" name="password" required><br>
+    <input type="email" id="email" name="email" th:field="*{email}" required th:value="${user.email}"><br>
+    <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="error"></div>
+    <label for="password">Hasło:</label><br>
+    <input type="password" id="password" name="password" th:field="*{password}" required><br>
+    <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="error"></div>
+    <label for="confirmPassword">Powtórz hasło:</label><br>
+    <input type="password" id="confirmPassword" name="confirmPassword" th:field="*{confirmPassword}" required><br>
+    <div th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}" class="error"></div>
     <input type="submit" value="Zarejestruj"><br>
 </form>
 </body>
