--- a/src/main/resources/templates/showArrivalShips.html
+++ b/src/main/resources/templates/showArrivalShips.html
@@ -43,20 +43,28 @@
         <table>
             <thead>
             <tr>
+                <th>Identyfikator</th>
                 <th>Nazwa</th>
                 <th>Bandera</th>
                 <th>Data przybycia</th>
                 <th>Godzina przybycia</th>
                 <th>Nadbrzeże</th>
+                <th></th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="ship : ${ships}">
+                <td th:text="${ship.id}"></td>
                 <td th:text="${ship.shipName}"></td>
                 <td th:text="${ship.flag}"></td>
                 <td th:text="${ship.arrivalDate}"></td>
                 <td th:text="${ship.arrivalTime}"></td>
                 <td th:text="${ship.mooringPlace}"></td>
+                <td><a th:href="@{'/showArrivalShips/' + ${ship.id}}"><button>Szczegóły</button></a></td>
+                <td th:if="${ship.user.getId() eq userId or isAdmin eq true}">
+                    <a th:href="@{'/deleteShip/' + ${ship.id}}"><button>Usuń</button></a>
+                    <a th:href="@{'/showArrivalShips/' + ${ship.id}}"><button>Edytuj</button></a>
+                </td>
             </tr>
             </tbody>
         </table>
