--- a/src/main/resources/templates/addShip.html
+++ b/src/main/resources/templates/addShip.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
     <title>Dodaj przybycie statku do portu w Świnoujściu</title>
 </head>
 <body>
