--- a/src/main/resources/templates/showArrivalShips.html
+++ b/src/main/resources/templates/showArrivalShips.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Lista przypłynięć statków do portu w Świnoujściu</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 </head>
 <body>
 <nav>
