--- a/src/main/resources/templates/viewShip.html
+++ b/src/main/resources/templates/viewShip.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Szczegóły statku: ${ship.shipName} </title>
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 </head>
 <body>
 <nav>
