--- a/src/main/resources/templates/home_v2.html
+++ b/src/main/resources/templates/home_v2.html
@@ -9,7 +9,7 @@
 
     <title>Home</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
 
     <script th:inline="javascript">
         /*<![CDATA[*/
@@ -18,6 +18,8 @@
 </head>
 
 <body>
+<script th:src="@{/js/bootstrap.bundle.js}"></script>
+
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
