--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Home</title>
+
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        /*]]>*/
+    </script>
 </head>
 <body>
+<script th:src="@{/js/bootstrap.bundle.js}"></script>
+
+<div class="container-md border">
+    <div class="align-content-center">
+        Here comes the content
+    </div>
+</div>
+
+<div class="container-md border">
+    <div class="row">
+        <div class="col border">
+            Here comes the content
+        </div>
+        <div class="col border">
+            Here comes the content
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
