Update: Updated views Updated following files: -index.html -viewShip.html -ShipContoller.java -HomeController.java
Added new views:
-viewShip-v2
-show_all_ships
-userProfile

Added new images

--- a/src/main/resources/templates/editShip.html
+++ b/src/main/resources/templates/editShip.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
     <title>Edycja przybycia statku do portu</title>
 </head>
 <body>
